--- a/style.css
+++ b/style.css
@@ -1,7 +1,51 @@
+/* fonts */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,500;0,600;1,600&display=swap');
+
 /* Reset */
 * {
   margin: o;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
+
+/* Estilo geral */
+
+body {
+  max-width: 2000px;
+  margin: 0 auto;
+}
+
+header {
+  background-color: #000;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+header h1 {
+  color: #35dcdc;
+  font-size: 2.5rem;
+}
+
+header  span {
+  color: #fff;
+}
+
+header .primeira-navegacao {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+header .primeira-navegacao li a {
+  padding: 10px;
+  color: #fff;
+  font-size: 1.3rem;
+}
+
+
+/* Seção Dowload-CV */
 
