--- a/style.css
+++ b/style.css
@@ -49,3 +49,74 @@ header .primeira-navegacao li a {
 
 /* Seção Dowload-CV */
 
+.section-um {
+  animation: inicializar .7s forwards;
+  background-color: #000;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-around;
+  align-items: center;
+  gap: 60px;
+  padding: 60px;
+}
+
+.section-um div {
+  margin-top: 120px;
+  align-self: start;
+  display: grid;
+}
+.section-um div h2 {
+  font-family: "Poppins";
+  font-weight: 600;
+  color: #35dcdc;
+}
+
+.section-um div p {
+  font-family: "Poppins";
+  font-weight: 200;
+  color: #fff;
+}
+
+.section-um div a {
+  justify-self: start;
+  color: #fff;
+  padding: 15px 40px;
+  border-radius: 5px;
+  border: 2px solid white;
+}
+
+.section-um img {
+  max-width: 100%;
+  border-radius: 50%;
+}
+
+.digitando::after {
+  content: '|';
+  margin-left: 5px;
+  opacity: 1;
+  animation: pisca .5s infinite;
+}
+
+
+
+
+
+@keyframes pisca {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes inicializar {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -60px, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
