--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* fonts */
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,500;0,600;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
 
 /* Reset */
 * {
@@ -14,7 +15,8 @@
 /* Estilo geral */
 
 body {
-  max-width: 2000px;
+  background-color: #000;
+  max-width: 1400px;
   margin: 0 auto;
 }
 
@@ -114,5 +116,143 @@ header .primeira-navegacao li a {
   to {
     opacity: 1;
     transform: translate3d(0, 0, 0);
+  }
+}
+
+
+/* SOBRE MIM */
+main {
+  background-color: #111;
+}
+
+main .sobre {
+  margin-top: 60px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+  justify-content: center;
+  padding: 40px;
+}
+
+.sobre-mim-titulo{
+  margin: 30px 0;
+  grid-column: 1/-1;
+  text-align: center;
+  color: #fff;
+}
+
+.sobre-mim-titulo h1 {
+  font-size: 2.5rem;
+  color: #35dcdc;
+  font-family: 'Berkshire Swash', cursive;
+}
+
+.sobre-mim-titulo p {
+  color: #707070;
+  font-size: 1.4rem;
+  margin-bottom: 1rem;
+  position: relative;
+}
+
+.sobre-mim-titulo div {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+
+.sobre-mim-titulo span {
+  display: block;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background-color: #35dcdc;
+}
+
+.sobre img {
+  animation: ladoSecao .5s ease-in-out forwards;
+  cursor: pointer;
+  grid-row: 2;
+  max-width: 100%;
+  border-radius: 50%;
+  filter: blur(0);
+}
+
+.sobre img:hover {
+  transition: .5s ease-in;
+  filter: blur(1px);
+}
+
+.sobre-conteudo {
+  animation:  sobreSecao .6s ease-in-out forwards;
+  grid-column: 2/-1;
+  color: #707070;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.sobre-texto {
+  display: grid;
+  grid-column: 1/-1;
+  grid-template-columns: 1fr 1fr;
+}
+
+.sobre-texto h1 {
+  font-size: 2.3rem;
+  color: #35dcdc7e;
+  grid-column: 1/-1;
+}
+
+.sobre-texto h1::after {
+  content: '';
+  background-color: #35dcdc;
+  height: 6px;
+  width: 60px;
+  margin: 20px 0;
+  display: block;
+  border-radius: 5px;
+}
+
+.sobre-texto p {
+  font-size: 1.3rem;
+  grid-row: 2;
+  grid-column: 1/-1;
+}
+
+.sobre-info {
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column: 1/-1;
+  gap: 15px;
+  align-items: center;
+}
+
+.sobre-info i {
+  color: #35dcdc;
+  display: inline-block;
+  padding-right: 10px;
+  font-size: 1.2rem;
+}
+
+.sobre-info p {
+  font-size: .9rem;
+}
+@keyframes sobreSecao {
+  from {
+    transition: .5s;
+    transform: translate3d(60px, 0, 0);
+  }
+  to {
+    transform: translate3d(0,0,0);
+  }
+}
+
+@keyframes ladoSecao {
+  from {
+    transition: .5s;
+    transform: translate3d(-60px, 0, 0);
+  }
+  to {
+    transform: translate3d(0,0,0);
   }
 }
